# cockroachdb-vectors

./: .gitignore  Dockerfile  LICENSE  README.md  config_tmpl.yaml  model_test.py  pyproject.toml  requirements.txt  test.py  vectorize.py
cockroachdb_vectors/: vectorize.py
cockroachdb_vectors/models/: hf_st_all_minilm_l6.py  openai_text_embed.py  takara_ds1_fukuro.py  takara_ds1_fukuro.yaml
cockroachdb_vectors/operations/: __init__.py  embed.py  instrument.py  model.py  search.py
demo/: NOTES.md  domains.yaml  fix_yaml.py  generate_demo_data.py  generate_research_prompts.py  prompt_template.py  semantic_clusters.yaml  vectorize_demo_data.py
docs/: Takara.md
models/: __init__.py  __init__py  hf_st_all_minilm_l6.py  hf_st_all_minilm_l6.yaml  openai_text_embed.py  sentence_transformer.py  takara-ds1-fukuro.py  takara_ds1_fukuro.py  takara_ds1_fukuro.yaml
operations/: __init__.py  common.py  embed.py  encode.py  instrument.py  model.py  search.py  size.py  trigger.j2  trigger.sql
skills/domain-ontology-matcher/: SESSION_NOTES.md  SKILL.md
skills/domain-ontology-matcher/assets/research/: aerospace_defense.md  ai_customer_experience.md  automotive_ev.md  blockchain_crypto.md  capital_markets.md  cloud_infrastructure.md  consumer_hospitality_retail.md  education_edtech.md  enterprise_software_services.md  financial_services.md  government_public_sector.md  hardware_semiconductor.md  healthcare_life_sciences.md  logistics.md  media_gaming_platforms.md  niche_industrial_tech.md  professional_business_services.md  rail_freight_infrastructure.md  real_estate_construction.md  retail_ecommerce.md  security_identity.md  telecom_communications.md
skills/domain-ontology-matcher/references/: capitalization_rules.md
skills/domain-ontology-matcher/scripts/: research.py  semantic.py
